@@ -7,8 +7,9 @@ INCLUDES = -I$(SRCDIR) -I$(TOGLDIR) \
 	$(TKINCLUDES) -I. $(GLINCLUDES) $(XINCLUDES)
 LIBS = $(TKLIBS) $(GLLIBS) $(XLIBS)
 LIBDIRS =
+ifeq (TOGL_WS,TOGL_X11)
 COPTS += -DUSE_TCL_STUBS -DUSE_TK_STUBS
-
+endif
 OCAMLINC=-I +labltk -I $(SRCDIR)
 
 # Files
